--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           '" />',
       )
     </script>
-    <title>unibest</title>
+    <title>xxm-wallpaper</title>
     <!--preload-links-->
     <!--app-context-->
   </head>
